fixed hud design

--- a/client_packages/gui/HUD/src/css/style.css
+++ b/client_packages/gui/HUD/src/css/style.css
@@ -9,6 +9,9 @@ body {
     user-select: none;
     font-family: 'Roboto', sans-serif;
     overflow: hidden;
+
+
+    /* background-color: grey; */
 }
 
 
