--- a/client_packages/gui/login/src/css/style.css
+++ b/client_packages/gui/login/src/css/style.css
@@ -1,5 +1,8 @@
+@import url('../../../_assets/css/root.css');
+
 body {
-    background-image: linear-gradient(135deg, #f35b03 10%, #bb2c2c 100%);
+    background: var(--background);
+    background: var(--background_gradient);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
