--- a/client_packages/gui/spawnChoose/src/css/style.css
+++ b/client_packages/gui/spawnChoose/src/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('../../../_assets/css/root.css');
 
 body {
     margin: 0;
@@ -7,8 +8,8 @@ body {
     user-select: none;
     font-family: 'Roboto', sans-serif;
 
-    background: rgba(255, 231, 13, 0.486);
-    background: linear-gradient(90deg, rgba(255,204,13,0.8379552504595589) 0%, rgba(255,163,13,0.8883754185267857) 48%, rgba(254,85,13,0.9500000683867297) 100%);
+    background: var(--background);
+    background: var(--background_gradient);
 }
 
 header img {
