--- a/client_packages/gui/HUD/src/css/style.css
+++ b/client_packages/gui/HUD/src/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('./speedometer.css');
 @import url('./top_right.css');
+@import url('./voice.css');
 
 body {
     margin: 0;
