added inventory to vue server

--- a/pg_vue_server/src/assets/css/inventory/style.css
+++ b/pg_vue_server/src/assets/css/inventory/style.css
@@ -1,4 +1,4 @@
-@import url('../../../_assets/css/root.css');
+@import url('../root.css');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
