- added debug config - worked on inventory

--- a/pg_vue_server/src/assets/css/inventory/style.css
+++ b/pg_vue_server/src/assets/css/inventory/style.css
@@ -6,7 +6,7 @@
 body {
     background: var(--background);
     background-image: var(--background_gradient);
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 #logo {
