--- a/pg_vue_server/src/assets/css/root.css
+++ b/pg_vue_server/src/assets/css/root.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 :root {
     --yellow: #fbcf1c;
     --red: #d21140;
