#47 Not found event hinzugefuegt

--- a/pg_vue_server/src/assets/css/gasstation/style.css
+++ b/pg_vue_server/src/assets/css/gasstation/style.css
@@ -263,3 +263,8 @@ hr {
     pointer-events: none;
     user-select: none;
 }
+
+.gs_notfound {
+    font-size: 1.25rem;
+    transform: translate(-10px, 200px);
+}
