--- a/pg_vue_server/src/assets/css/inventory/style.css
+++ b/pg_vue_server/src/assets/css/inventory/style.css
@@ -82,6 +82,15 @@ body {
     opacity: 0.7;
 }
 
+.inv_item div span {
+    margin-top: 8px;
+    margin-left: -10px;
+    font-weight: 900;
+    color: white;
+    padding: 2px 4px;
+    background: rgba(0, 0, 0, 0.19);
+}
+
 #inventar footer {
     margin: 150px 0 0 0;
 }
