Add contet menu with actions

--- a/pg_vue_server/src/assets/css/inventory/style.css
+++ b/pg_vue_server/src/assets/css/inventory/style.css
@@ -114,3 +114,10 @@ body {
 .inv_char_img img {
     width: 80%;
 }
+
+
+.inv_context {
+    padding: 10px 20px;
+    background: rgb(55, 55, 55);
+    z-index: 9;
+}
