--- a/pg_vue_server/src/assets/css/hud/top_right.css
+++ b/pg_vue_server/src/assets/css/hud/top_right.css
@@ -25,7 +25,7 @@
 .top_right .time span:first-child {
     width: max-content;
     height: max-content;
-    background: rgba(255, 255, 255, 0.158);
+    background: rgb(0 0 0 / 25%);
 
     backdrop-filter: blur(1px);
     -webkit-backdrop-filter: blur(1px);
